src/compiletest/lcell-15.stderr
error[E0277]: `std::rc::Rc<i32>` cannot be sent between threads safely
  --> $DIR/lcell-15.rs:12:15
   |
12 |             s.spawn(move |_| assert_eq!(100, **owner.ro(&cell))).join().unwrap(); // Compile fail
   |               ^^^^^ `std::rc::Rc<i32>` cannot be sent between threads safely
   |
   = help: within `[closure@$DIR/src/compiletest/lcell-15.rs:12:21: 12:64 owner:qcell::LCellOwner<'_>, cell:qcell::LCell<'_, std::rc::Rc<i32>>]`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<i32>`
   = note: required because it appears within the type `std::cell::UnsafeCell<std::rc::Rc<i32>>`
   = note: required because it appears within the type `qcell::LCell<'_, std::rc::Rc<i32>>`
   = note: required because it appears within the type `[closure@$DIR/src/compiletest/lcell-15.rs:12:21: 12:64 owner:qcell::LCellOwner<'_>, cell:qcell::LCell<'_, std::rc::Rc<i32>>]`
